Use the Windows image

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,15 +4,12 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Get hostedtools
         run: |
-          ls /c/
-          ls /c/hostedtoolcache
-          ls /c/hostedtoolcache/windows
-          ls /c/hostedtoolcache/windows/Boost
-          ls /c/hostedtoolcache/windows/Boost/1.72
-          ls /c/hostedtoolcache/windows/Boost/1.72.0
-          ls /c/hostedtoolcache/windows/Boost/1.72/x64
-          ls /c/hostedtoolcache/windows/Boost/1.72.0/x64
+          ls C:/hostedtoolcache
+          ls C:/hostedtoolcache/windows
+          ls C:/hostedtoolcache/windows/Boost
+          ls C:/hostedtoolcache/windows/Boost/1.72.0
+          ls C:/hostedtoolcache/windows/Boost/1.72.0/x64
