--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,8 +8,4 @@ jobs:
     steps:
       - name: Get hostedtools
         run: |
-          ls C:/hostedtoolcache
-          ls C:/hostedtoolcache/windows
-          ls C:/hostedtoolcache/windows/Boost
-          ls C:/hostedtoolcache/windows/Boost/1.72.0
-          ls C:/hostedtoolcache/windows/Boost/1.72.0/x64
+          ls C:/Program Files/Boost/
